syntax = "proto3";

package SensorData;

// Define a message for the sensor data
message SensorDataEntry {
    string time_span = 1;  // Using string for TimeSpan for simplicity
    double value = 2;
}

// Define a message to wrap a list of sensor data
message SensorDataList {
    repeated SensorDataEntry data = 1;
}
